--- a/package.json
+++ b/package.json
@@ -13,5 +13,31 @@
   "bugs": {
     "url": "https://github.com/npisciotti1/AssassinTagFrontend/issues"
   },
-  "homepage": "https://github.com/npisciotti1/AssassinTagFrontend#readme"
+  "homepage": "https://github.com/npisciotti1/AssassinTagFrontend#readme",
+  "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-jest": "^21.0.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "enzyme": "^2.9.1",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^2.30.1",
+    "jest": "^21.0.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-test-renderer": "^15.6.1",
+    "redux": "^3.7.2",
+    "sass-loader": "^6.0.6",
+    "superagent": "^3.6.0",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "url-loader": "^0.5.9",
+    "uuid": "^3.1.0",
+    "webpack": "^3.5.6",
+    "webpack-dev-server": "^2.7.1"
+  }
 }
